# TaiwanLotteryCrawler

./: .gitconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  crawl.py  pytest.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  merge.yaml  pull_request.yaml  release.yaml
TaiwanLottery/: __init__.py  utils.py
libs/: lottery.py  utils.py
src/: lottery.py  utils.py
tests/: test_lottery.py  test_utils.py
