[metadata]
name = TaiwanLotteryCrawler
description = Taiwan Lottery Crawler
author = Cliff Su
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    requests>=2
    beautifulsoup4>=4
    terminaltables>=3

python_requires = >=3.6
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    flake8>=6.0
    tox>=4.6

[flake8]
max-line-length = 160
